Enable local GPUs
